# rabbitmqclient

./: .gitignore  CMakeLists.txt  README.md
docs/: amqpcpp_ssl_fixed.diff
examples/: CMakeLists.txt  rabbitmq_receiver.cc  rabbitmq_sender.cc
include/: thread_raii.h
include/rabbitmq_client/: rabbitmq_client.h
src/: rabbitmq_client.cc
